--- a/01himedia/css/reset.css
+++ b/01himedia/css/reset.css
@@ -1,18 +1,8 @@
-@charset "UTF-8";
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-a:visited, a:link {
-    text-decoration: none;
-    color: #000;
-}
-li {
-    list-style: none;
+@charset "utf-8";
+
+*{margin: 0;padding: 0;box-sizing:border-box}
+li{list-style: none;}
+a:link,a:visited{text-decoration: none;color: #000;}
+.clearfix:after{
+    content:"";display: block;clear: both;
 }
