--- a/01himedia/css/style.css
+++ b/01himedia/css/style.css
@@ -1,513 +1,275 @@
-@charset "UTF-8";
- .toggle {
-  width: 48px;
-  height: 48px;
-  border: 1px solid #aaa;
-  position: relative;
-  cursor: pointer;
-  display: none;
-  }
- .toggle div {
-  width: 24px;
-  height: 3px;
-  background: #aaa;
-  border-radius: 1.5px;
-  position: absolute;
-  left: 50%;
-  margin-left: -12px;
-  }
- .toggle div.bar1{
-   top: 11px;
-  }
- .toggle div.bar2{
-   top: 21px;
-  }
- .toggle div.bar3{
-   top: 30px;
-  }
+@charset "utf-8";
+.toggle{
+    width: 35px;height: 35px;border: 1px solid #aaa;
+    position: relative;cursor:pointer;display: none;
+}
+.toggle div{
+    width: 24px;height: 3px;background: #aaa;
+    border-radius:1.5px;
+    position: absolute;left: 50%;
+    margin-left: -12px;
+}
+.toggle div.bar1{top:8px}
+.toggle div.bar2{top:50%;margin-top:-1.5px;}
+.toggle div.bar3{bottom:8px}
+
+.txt h3{font-size: 18px;}
+.txt p{font-size: 14px;}
+
+
+.cir:after{
+    content:"";display: block;width: 24px;height: 2px;
+    background: #fff;
+    position: absolute; left: 50%;top: 50%;
+    margin-left: -12px;margin-top:-1px;
+}
+.cir:before{
+    content:"";display: block;position: absolute;
+    width: 2px;height: 24px;background: #fff;
+    left: 50%;top: 50%;margin-left: -1px;margin-top: -12px;
+}
+
+
+/* common  */
+.mb5{margin-bottom: 5px !important;}
+.mb16{margin-bottom: 16px !important;}
+
 
 
 @media screen and (max-width:699px){
-   /* header */
-   #header {
-    padding: 4px 16px;
-    background: #skyblue;
+    /* header  */
+    #header{
+        padding: 12px 16px;background:white;
+
+        /* box-shadow */
+        box-shadow:0 10px 10px rgba(0,0,0,0.2);
+        position: relative
+        }
+    #header .topWrap{display: none;}
+    #header .navWrap{display: none;}
+    .toggle{display: block;}
+    #header .logWrap h1{float: left;font-size:30px;line-height:35px;}
+    #header .logWrap .toggle{float: right;}
+
+    /* visual */
+    .visualWrap{
+        background: #203b6a url(../images/visualbg01.png) no-repeat;
+        background-size: cover;overflow:hidden
     }
-   #header .topWrap{
-    display: none;
+    .visualWrap .visual{
+        height: 600px;padding:16px;position: relative;padding-top: 50px;
     }
-   #header .navWrap{
-    display: none;
+    .visualWrap .visual .visualTxt{
+        font-size: 79px;font-weight: bold;color:#fff;
+        line-height:70px;text-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
-   .toggle{
-    display: block;
+    .visualWrap .visual img{
+        position: absolute;bottom:-20px;right: -55px;
     }
-    #header .logoWrap {
+
+
+    /* banner */
+    .banner{padding:16px}
+    .banner .bannerWrap li{
+        float: left;width: 50%;padding: 20px;
+        text-align: center;color: #fff;
+    }
+    .banner .bannerWrap li img{display: block;margin: 0 auto;margin-bottom: 10px;}
+    .banner .bannerWrap .txt p{display: none;}
+    .bannerWrap li:nth-child(1){background: #7C99B9;}
+    .bannerWrap li:nth-child(2){background: #4F74A1;}
+    .bannerWrap li:nth-child(3){background: #4B8CE0;}
+    .bannerWrap li:nth-child(4){background: #3DB5F2;}
+    .bannerWrap li:nth-child(5){display: none;}
+
+    /* content  */
+    .content{padding: 0 16px;margin-bottom:30px;}
+    .content li{
+        width: 100%;
+        border-radius:0 10px 0 10px;overflow: hidden;
+        box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+        position: relative;
+    }
+    .content li img{width: 100%;}
+    .content .txt{padding: 18px 16px;}
+    .content .circle{
+        width: 50px;height: 50px;background: #aaa;
+        position: absolute;right: 16px;bottom: 25px;
+        border-radius:25px;
+        box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+    }
+    .content li:last-child{display: none;}
+
+
+
+
+    /* .content .circle .bar1{
+        width: 30px;height: 2px;background: #fff;
+        position: absolute;left: 50%;top: 50%;
+        margin-left: -15px;margin-top: -1px;
+    }
+    .content .circle .bar2{
+        width: 2px;height: 30px;background: #fff;
+        position: absolute;left: 50%;top: 50%;
+        margin-left: -1px;margin-top:-15px;
+    } */
+
+    /* sec2st  */
+    .sec2st{padding: 0 16px;}
+    .sec2st li{
+        width: calc(( 100% - 10px ) / 2);border: 1px solid #ccc;
+        border-radius: 10px;position: relative;
+        float: left;margin-right:10px;
+    }
+    .sec2st li:nth-child(2n){margin-right:0;}
+    .sec2st li img{
+        position: absolute;right: 0;height:100%;
+        ;
+
+    }
+    .sec2st .txt{padding:18px 16px}
+    .sec2st .txt h3{margin-bottom:10px;}
+    .sec2st .txt p{display: none;}
+    .sec2st .txt a{font-size:14px;color: #1c84ff;font-weight: bold;}
+
+
+    /* footer  */
+    #footerWrap{background: #5e5e5e}
+    #footerWrap .footer1st{background: #4d4d4d;padding:10px 16px;}
+    #footerWrap .footer1st li{
+        float: left;font-size:12px;width: calc(100% / 3);
+    }
+    #footerWrap .footer1st li a{display: block;text-align: center;color: #fff;line-height:40px;}
+
+    #footerWrap .footer1st .top{
+        position: fixed;right:20px;bottom:50px;
+        width: 40px;height: 40px;background: orange;
+        border-radius: 10px;text-align: center;line-height:40px;
+    }
+
+    #footerWrap .footer2st{padding:30px 20px;text-align: center;font-size:12px;}
+    #footerWrap .footer2st h2{margin-bottom:20px;font-size:18px;}
+    #footerWrap .footer2st .footerAdd{font-style:normal;color:#fff}
+
+}  /* mobile */
+
+
+
+
+
+@media screen and (min-width:700px){
+    /* header */
+    #header{min-width:980px}
+    #header .topWrap{border-bottom: 1px solid #c4c4c4;}
+    #header .top{width: 980px;margin: 0 auto}
+    #header .util li{float: left;}
+    #header .util li a{
+        display: block;padding:0 10px;height: 26px;color:#888;
+        font-size:14px;line-height:26px;position: relative;
+    }
+    #header .util li a:after{
+        content:"";width: 1px;height: 10px;background: #c4c4c4;
+        position: absolute;top:10px; right: 0;
+    }
+    #header .util li:last-child a:after{content:"";display: none;}
+    #header .util{float: right;}
+
+    #header .logWrap h1{width: 200px;text-align: center;margin: 0 auto;line-height: 60px;}
+
+    #header .navWrap{background: #1D5DA4;}
+    #header .gnb{width: 980px;margin: 0 auto;}
+    #header .gnb li{float: left;width:calc(100% / 6);border-right: 1px solid #ddd;}
+    /* #header .gnb li:first-child{border-left: 1px solid #ddd;} */
+    #header .gnb li a{display: block;text-align: center;line-height:40px;color:white;font-weight: bold;border-right: 1px solid #ddd;}
+    #header .gnb li a:hover{background: rgb(3, 154, 241);}
+
+    /* visual */
+    .visualWrap{
+        background: #203b6a url(../images/visualbg01.jpg) no-repeat center;overflow:hidden
+    }
+    .visualWrap .visual{width: 980px;margin: 0 auto;position: relative;
+        height: 400px;}
+    .visualWrap .visual .visualTxt{
+        font-size: 79px;font-weight: bold;color:#fff;text-shadow: 0 0 10px rgba(0,0,0,0.4);position: absolute;top:50%;margin-top:-105px;
+    }
+    .visualWrap .visual img{position: absolute;right: 0;bottom: -20px;}
+
+
+    /* banner */
+    .banner .bannerWrap{width: 980px;margin: 0 auto;margin-bottom:16px;}
+    .banner .bannerWrap li{
+        float: left;width:calc(100% / 5);color:#fff;
+        padding:20px 10px;text-align: center;
+    }
+    .banner .bannerWrap li img{margin-bottom:5px;}
+    .banner .bannerWrap li h3{font-size: 18px;margin-bottom: 5px;}
+    .banner .bannerWrap li p{
+        font-size:14px;letter-spacing:-1px ;}
+
+    .bannerWrap li:nth-child(1){background: #7C99B9;}
+    .bannerWrap li:nth-child(2){background: #4F74A1;}
+    .bannerWrap li:nth-child(3){background: #4B8CE0;}
+    .bannerWrap li:nth-child(4){background: #3DB5F2;}
+    .bannerWrap li:nth-child(5){background: #95C8FF;}
+
+    /* section  */
+    .content{width: 980px;margin: 0 auto;}
+    .content li{float:left;width: 310px;margin-right:25px;}
+    .content li:last-child{margin-right:0;}
+    .content li img{display: block;}
+    .content .txt{
+        padding:18px 16px;
+        border: 1px solid #ddd;
+        border-top: 0 none;
+    }
+    .content .circle{display: none;}
+
+
+
+    /* sec2st  */
+    .sec2st{width: 980px;margin: 0 auto;}
+    .sec2st li{
+        width: calc(( 100% - 50px ) / 3);border: 1px solid #ccc;
+        border-radius: 10px;position: relative;
+        float: left;margin-right:25px;overflow: hidden;
+    }
+    .sec2st li:nth-child(3){margin-right:0;}
+    .sec2st li:nth-child(4){display: none;}
+    .sec2st li img{
+        position: absolute;right: -20px;height:100%;
+        ;
+
+    }
+    .sec2st .txt{padding:18px 16px;width:160px}
+    .sec2st .txt h3{margin-bottom:5px;}
+    .sec2st .txt p{margin-bottom:5px;}
+    .sec2st .txt a{font-size:14px;color: #1c84ff;font-weight: bold;}
+
+
+    /* footer  */
+    #footerWrap{background: #5e5e5e}
+    #footerWrap .footer1st{background: #4d4d4d;}
+    #footerWrap .footer1st .footer{width: 980px;margin: 0 auto;}
+    #footerWrap .footer1st .footer ul{float: left;}
+    #footerWrap .footer1st li{
+        float: left;
+    }
+    #footerWrap .footer1st li a{display: block;text-align: center;color: #fff;line-height:40px;padding:0 15px;position: relative;}
+    #footerWrap .footer1st li a:after{
+        content:"";display: block;position: absolute;width: 1px;height: 15px;background: #fff;top:12px;right: 0;
+    }
+    #footerWrap .footer1st li:first-child a{padding-left:0;}
+    #footerWrap .footer1st li:last-child a:after{content:"";display: none;}
     
+    #footerWrap .footer1st .top{
+        float:right;background: orange; width:50px;
+       text-align: center;line-height:40px;
     }
-    #header .logoWrap h1{
-    float: left;
-    }
-    #header .logoWrap .toggle{
-    float: right;
-    }
-}
-@media screen and (min-width: 700px){
-     #header .topWrap {
-   border-bottom: 1px solid #c4c4c4;
-    }
-     #header .top{
-   width: 980px;
-   margin: 0 auto;
-    }
-    #header .util {
-    float: right;
-    }
-    #header .util li {
-    float: left;
-    }
-    #header .util li a {
-    display: block;
-    padding: 0 10px;
-    height: 26px;
-    color: #888;
-    font-size: 14px;
-    line-height: 26px;
-    }
-   #header .util li a:after {
-   content:="";
-   width: 1px;
-   height: 10px;
-   background: #c4c4c4;
-   position: absolute;
-   top: 10px;
-   right: 0;
- }
- #header .util li:last-child a:after {
-  content:="";
-  display: none;
- }
- #header .util {float: right;}
- #header .logoWrap h1 {
- width: 200px;
- text-align: center;
- margin: 0 auto;
- line-height: 50px;
- }
- #header .navWrap {
-  backgroud: #1d5da4;
- }
- #header .gnb {
- width: 980px;
-  margin: 0 auto;
- }
- #header .gnb li {
- float: left;
- width: calc(100% / 6);
- border-right: 1px solid #ddd;
- }
- #header .gnb li:first-child {
- 
- }
-/* content */
-.content {
-    padding: 0 16px;
-}
-.content li {
-    width: 100%;
-    background: rgb(219, 110, 110);
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
-    position: relative;
-}
-.content li img {
-    width: 100%;
-}
-.content .txt {
-    padding: 18px 16px;
-}
-.content .circle {
-    width: 70px;
-    height: 70px;
-    background: rgb(207, 207, 207);
-    position: absolute;
-    right: 16px;
-    bottom: 25px;
-    border-radius: 25px;
-}
-.content .circle .bar1 {
-    width: 30px;
-    height: 2px;
-    background-color: #000;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -15px;
-    margin-top: -1px;
-}
-.content .circle .bar2 {
-    width: 2px;
-    height: 30px;
-    background-color: #000;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -1px;
-    margin-top: -15px;
-}
-.content li:last-child {
-    display: none;
-}
-/* content */
-/* //////////////////////////////////////// */
-body {
-    font-family: 'Roboto', sans-serif;
-    color: #888;
-}
-#header {
 
-}
-.topWrap {
-    border-bottom: 1px solid #c4c4c4;
-}
-.topWrap .top{
-    width: 980px;
-    margin: 0 auto;
-}
-.util {
-    float: right;
-}
-.util>ul {
+    #footerWrap .footer2st{width: 980px;margin: 0 auto;padding:20px 0;}
+    #footerWrap .footer2st h2{float: left;margin-right:30px;}
+    #footerWrap .footer2st .footerAdd{float: left; font-style:normal;color:#fff}
 
-}
-.util>ul>li {
-    float: left;
-}
-.util>ul>li>a {
-    display: block;
-    text-align: center;
-    line-height: 26px;
-    padding: 0px 8px;
-    color: #888;
-    font-size: 14px;
-    position: relative;
-}
-.util>ul>li>a::after {
-    content: "";
-    width: 1px;
-    height: 10px;
-    display: block;
-    background-color: #c4c4;
-    position: absolute;
-    top: 10px;
-    right: 0;
-}
-.util>ul>li:last-child>a:after {
-    content: "";
-    display: none;
-}
 
-/* logo시작 */
-.logoWrap {
-    width: 980px;
-    margin: 0 auto;
-}
-.logoWrap>h1 {
-    width: 200px;
-    margin: 0 auto;
-}
-.logoWrap>h1>a {
-    display: block;
-    text-align: center;
-    line-height: 75px;
-}
 
-/* gnb */
-.navWrap {
-    background-color: #1d5da4;
-}
-.navWrap>nav.gnb {
-    width: 980px;
-    margin: 0 auto;
-}
-.navWrap>nav.gnb li {
-    float: left;
-    width: calc( 980px  / 6);
-    border-right: 1px solid #336dac;
-}
-.navWrap>nav.gnb li:first-child {
-    border-left: 1px solid #336dac;
-}
-.navWrap>nav.gnb a {
-    display: block;
-    text-align: center;
-    line-height: 45px;
-    color: #fff;
-    font-weight: bold;
-}
-.navWrap>nav.gnb a:hover {
-    color: rgb(255, 255, 255);
-    background-color: rgb(6, 37, 122);
-}
-/* header 끝 */
-
-/* visual 시작 */
-#visualWrap {
-    height: 400px;
-    background-image: url(../images/visualBG.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #203b64;
-    overflow: hidden;
-}
-#visualWrap>.visual {
-    width: 980px;
-    height: 400px;
-    position: relative;
-    margin: 0 auto;
-}
-#visualWrap>.visual>.visualTxt {
-    position: absolute;
-    font-size: 79px;
-    font-weight: bold;
-    line-height: 92px;
-    letter-spacing: 0.085em;
-    color: #fff;
-    top: 50%;
-    margin-top: -92px;
-}
-#visualWrap>.visual>img {
-    position: absolute;
-    right: 0;
-    top: 20px;
-}
-
-/* visual 끝 */
-
-/* banner 시작 */
-.bannerWrap {
-    width: 980px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-}
-.bannerWrap li {
-    float: left;
-    width: calc(100% / 5);
-    height: 196px;
-    padding: 10px;
-    padding-top: 19px;
-}
-.bannerWrap img {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 5px;
-}
-.bannerWrap .txt {
-    color: #fff;
-    text-align: center;
-}
-.bannerWrap h3 {
-    font-size: 18px;
-}
-.bannerWrap p {
-    font-size: 14px;
-    letter-spacing: -0.075em;
-}
-.bannerWrap li:nth-child(1) {
-    background: #7c99b9;
-}
-.bannerWrap li:nth-child(2) {
-    background: #4f74a1;
-}
-.bannerWrap li:nth-child(3) {
-    background: #4b8ce0;
-}
-.bannerWrap li:nth-child(4) {
-    background: #3db5f2;
-}
-.bannerWrap li:nth-child(5) {
-    background: #95c8ff;
-}
-/* banenr 끝 */
-
-/* content */
-.content {
-    width: 980px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-}
-.content li{
-    float: left;
-    width: 310px;
-    margin-right: 25px;
-}
-.content li:last-child {
-    margin-right: 0;
-}
-.content .txt {
-    padding: 18px 16px;
-    border: 1px solid #e5e5e5;
-    border-top: 0 none;
-}
-.content h3 {
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-.content p {
-    font-size: 14px;
-}
-.content img {
-    display: block;
-}
-
-/* sec2st */
-.sec2st {
-    width: 980px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-}
-.sec2st li {
-    float: left;
-    width: 310px;
-    margin-right: 25px;
-    border: 1px solid #e5e5e5;
-    padding: 18px;
-    position: relative;
-    overflow: hidden;
-}
-.sec2st li:last-child {
-    margin-right: 0;
-}
-.sec2st .txt {
-    width: 150px;
-    position: relative;
-}
-.sec2st h3 {
-    font-size: 18px;
-    margin-bottom: 13px;
-}
-.sec2st a {
-    font-size: 14px;
-    color: #1c84ff;
-}
-.sec3st img {
-    position: absolute;
-    right: -40px;
-    top: 2px;
-}
-
-/* sec3st */
-.sec3st {
-    width: 980px;
-    margin: 0 auto;
-}
-.sec3st li {
-    float: left;
-    width: 310px;
-    margin-right: 25px;
-    border: 1px solid #e5e5e5;
-    padding: 18px;
-    background-repeat: no-repeat;
-    background-position: 140px center;
-}
-.sec3st li:last-child {
-    margin-right: 0;
-}
-.sec3st li:nth-child(1) {
-    background-image: url(../images/content_icon01.png);
-}
-.sec3st li:nth-child(2) {
-    background-image: url(../images/content_icon02.png);
-}
-.sec3st li:nth-child(3) {
-    background-image: url(../images/content_icon03.png);
-}
-.sec3st .txt {
-    width: 150px;
-    position: relative;
-}
-.sec3st h3 {
-    font-size: 18px;
-    margin-bottom: 13px;
-}
-.sec3st p {
-    font-size: 14px;
-    margin-bottom: 13px;
-}
-.sec3st a {
-    font-size: 14px;
-    color: #1c84ff;
-}
-
-/* footer */
-#footer {
-    height: 147px;
-    background-color: rgb(99, 99, 99);
-}
-.footerWrap {
-    height: 43px;
-    background-color: rgb(80, 80, 80);
-    
-}
-.footerTop {
-    width: 980px;
-    margin: 0 auto;
-}
-.footerTop a {
-    color: #fff;
-    display: block;
-    float: left;
-    padding: 5px;
-    line-height: 43px;
-    padding: 0 15px;
-    position: relative;
-    /* border-right: 1px solid rgb(102, 102, 102); */
-}
-.footerTop a::after {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 10px;
-    background-color: rgb(180, 180, 180);
-    position: absolute;
-    right: 0;
-    top: 15px;
-}
-.footerTop .txt a:nth-child(3)::after,
-.footerTop .txt a:nth-child(4)::after {
-    content: "";
-    display: none;
-    
-}
-.footerTop a:last-child {
-    float: right;
-    width: 43px;
-    height: 43px;
-    background-color: rgb(41, 41, 41);
-    line-height: 43px;
-    text-align: center;
-}
-.footerLast {
-    width: 980px;
-    margin: 0 auto;
-    padding-top: 10px;
-}
-.footerLast h3 {
-    float: left;
-    line-height: 104px;
-    color: #fff;
-}
-.footerLast p {
-    float: right;
-    color: rgb(160, 160, 160);
-    fz1
-}
-/* .line::after {
-    content: "";
-    width: 2px;
-    height: 25px;
-    color: rgb(117, 117, 117);
-    display: block;
-} */
-/* common */
-.bgGray {background: #ccc !important;}
+} /* pc */
