--- a/02college/css/style.css
+++ b/02college/css/style.css
@@ -407,5 +407,7 @@ body {
 #footer .txt {
     font-size: 12px;
     color: rgb(112, 112, 112);
+    transform: translateX(200px);
+    left: 50%;
 }
 
