--- a/08fullpage02/css/style.css
+++ b/08fullpage02/css/style.css
@@ -59,6 +59,8 @@
 	border:1px solid silver;
 }
 .swiper-slide {
+    
+    position: relative;
 	text-align:center;
 	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
 	align-items:center; /* 위아래 기준 중앙정렬 */
@@ -69,6 +71,7 @@
 	max-width:100%; /* 이미지 최대너비를 제한, 슬라이드에 이미지가 여러개가 보여질때 필요 */
 	/* 이 예제에서 필요해서 설정했습니다. 상황에따라 다를 수 있습니다. */
 }
+.swiper-slide a {position: absolute; bottom: 0; background: #000;}
 /* //////////////// */
 
 @media screen and (min-width: 600px) {
@@ -77,4 +80,5 @@
 @media screen and (max-width: 599px) {
     .sliderWrap {display: none;}
     .slideWrap2 {display: block;}
+    .swiper-wrapper {display: none;}
 }
