--- a/08fullpage02/css/style.css
+++ b/08fullpage02/css/style.css
@@ -67,6 +67,7 @@
 	justify-content:center; /* 좌우 기준 중앙정렬 */
 }
 .swiper-slide img {
+    padding: 20px;
     background: #151515;
 	max-width:100%; /* 이미지 최대너비를 제한, 슬라이드에 이미지가 여러개가 보여질때 필요 */
 	/* 이 예제에서 필요해서 설정했습니다. 상황에따라 다를 수 있습니다. */
