--- a/08fullpage02/css/style.css
+++ b/08fullpage02/css/style.css
@@ -19,67 +19,27 @@
 .nextBtn, .preBtn{position: absolute; top: 50%; margin-top: -50px; cursor: pointer;}
        .nextBtn{right: 0;}
        .preBtn {left: 0;}
-.sliderWrap li {position: relative;}
-.sliderWrap li a {
-    background: #000; display: inline-block; color: #fff; padding: 10px 40px;
-    border: 1px solid #fff;
-    position: relative;
-    bottom: 60px;
-    left: 30px;
-}
+
+
 .sliderWrap li a:hover {background: #fff; color: #000;}
 .sliderWrap .txt {
     position: absolute;
-    top: 60px;
+    top: 20%;
     left: 60px;
     color: #fff;
 }
 .sliderWrap .txt span {font-size: 20px;}
 .sliderWrap .txt h1 {font-size: 84px;}
-.slideWrap2 li {position: relative;}
-.slideWrap2 img {width: 500px;}
-.slideWrap2 .txt {position: absolute; top: 50px; color: #fff;margin-left: 10px;}
-.slideWrap2 .txt span {font-size: 20px;}
-.slideWrap2 .txt h1 {font-size: 84px;}
-.slideWrap2 li a {
-    margin: 5px;
-    background: #000; color: #fff; display: block;
-    padding: 10px 40px; border: 1px solid #fff; text-align: center;
-    position: relative; bottom: 200px;
+.sliderWrap .btn {position: absolute; left: 10%; bottom: 50%; transform: translateY(50%);}
+.sliderWrap .btn a {
+    color: #fff; font-size: 20px; padding: 10px 25px; background: #000;
+    border: 2px solid #fff;
 }
-.slideWrap2 li a:hover {background: #fff; color: #000;}
-.nextBtn2, .preBtn2{position: absolute; top: 50%; margin-top: -50px; cursor: pointer;}
-.nextBtn2{right: 0;}
-.preBtn2 {left: 0;}
-
-/* //////////////// */
-
-.swiper-container {
-	height:420px;
-	border:1px solid silver;
-}
-.swiper-slide {
-    
-    position: relative;
-	text-align:center;
-	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
-	align-items:center; /* 위아래 기준 중앙정렬 */
-	justify-content:center; /* 좌우 기준 중앙정렬 */
-}
-.swiper-slide img {
-    padding: 20px;
-    background: #151515;
-	max-width:100%; /* 이미지 최대너비를 제한, 슬라이드에 이미지가 여러개가 보여질때 필요 */
-	/* 이 예제에서 필요해서 설정했습니다. 상황에따라 다를 수 있습니다. */
-}
-.swiper-slide a {position: absolute; bottom: 0; background: #000;}
-/* //////////////// */
-
-@media screen and (min-width: 600px) {
-    .slideWrap2 {display: none;}
-}
-@media screen and (max-width: 599px) {
-    .sliderWrap {display: none;}
-    .slideWrap2 {display: block;}
-    .swiper-wrapper {display: none;}
+#footer {height: 300px;background: rgb(19, 20, 21); width: 100%; position: relative;}
+.btmMenu::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: rgb(174, 174, 174);
 }
