--- a/08fullpage02/css/style.css
+++ b/08fullpage02/css/style.css
@@ -35,11 +35,14 @@
     color: #fff; font-size: 20px; padding: 10px 25px; background: #000;
     border: 2px solid #fff;
 }
-#footer {height: 300px;background: rgb(19, 20, 21); width: 100%; position: relative;}
-.btmMenu::after {
+.footer {background: rgb(19, 20, 21); width: 100%; position: relative;}
+.btmMenu li {padding-right: 10px; position: relative;}
+.btmMenu ul::after {
+    content: "";
     display: block;
-    position: absolute;
     width: 100%;
-    height: 2px;
-    background: rgb(174, 174, 174);
+    height: 1px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 45px;
 }
